fixed responsiveness and alignment of submit button + textarea on edit post form

--- a/fashioncents/src/index.css
+++ b/fashioncents/src/index.css
@@ -453,12 +453,14 @@ a {
   height: 200px;
   width: 80%;
   margin: 1rem;
+  align-self: center;
 }
 
 .editForm input {
   height: 2rem;
   margin: 1rem;
   width: 200px;
+  align-self: center;
 }
 
 /* ####################### Create Post Form ######################## */
